--- a/src/aind_hcr_data_loader/MOUSE_HCR_CONFIG.json
+++ b/src/aind_hcr_data_loader/MOUSE_HCR_CONFIG.json
@@ -30,8 +30,9 @@
     "755252": {
     "mouse_id": "755252",
     "rounds": {
+      "R1": "HCR_755252_2025-07-02_13-00-00_processed_2025-07-18_09-27-44",
       "R2": "HCR_755252_2025-07-10_13-00-00_processed_2025-07-21_17-35-04",
-      "R3": "HCR_755252_2025-07-17_13-00-00_processed_2025-07-21_17-35-16",
+      "R3": "HCR_755252_2025-07-17_13-00-00_processed_2025-07-21_17-35-16"
     },
     "metadata": {
       "species": "mouse",
@@ -41,8 +42,9 @@
   "767022": {
     "mouse_id": "767022",
     "rounds": {
+      "R1": "HCR_767022_2025-07-03_13-00-00_processed_2025-07-18_09-27-44",
       "R2": "HCR_767022_2025-07-11_13-00-00_processed_2025-07-21_17-35-18",
-      "R3": "HCR_767022_2025-07-18_13-00-00_processed_2025-07-21_17-35-38",
+      "R3": "HCR_767022_2025-07-18_13-00-00_processed_2025-07-21_17-35-38"
     },
     "metadata": {
       "species": "mouse",
